static/css/style.css
* {
  box-sizing: border-box;
  font-family: Roboto, sans-serif;
}
:root {
  --main-gradient: linear-gradient(
      to right,
      rgb(77, 77, 255),
      rgb(102, 153, 255),
      rgb(102, 179, 255)
    ),
    rgb(153, 204, 255);
}
body,
html {
  background: var(--main-gradient);
  margin: 0;
  overflow: auto;
  width: 100%;
  height: 100%;
}

/* HOME */

#home {
  height: 100vh;
}

.navbar {
  position: sticky;
  top: 0;
  margin: 0;
  z-index: 1;
  background-color: white;
  height: 70px;
  width: 100%;
}

.navbar-elements {
  position: relative;
  bottom: 35px;
  margin: 0;
  float: right;
  list-style: none;
  padding-left: 30px;
  padding-right: 30px;
  padding-bottom: 22px;
  padding-top: 25px;
  width: auto;
  height: auto;
}

a {
  text-decoration: none;
  color: black;
}

#Developers-page {
  padding-right: 25px;
  margin-right: 3px;
}

.navbar-elements:hover {
  transition: 0.4s;
  background-color: rgb(230, 230, 230);
  cursor: pointer;
  border-radius: 10px;
}

#main-title {
  display: inline;
  margin-left: 50px;
  position: relative;
  top: 35%;
  font-size: 1.2em;
  text-shadow: 1px 1px rgb(128, 191, 255);
}

@keyframes typewriter {
  from {
    width: 0;
  }
  to {
    width: 24em;
  }
}

@keyframes blinkTextCursor {
  from {
    border-right-color: rgba(255, 255, 255, 0.75);
  }
  to {
    border-right-color: transparent;
  }
}

.line {
  font-family: Roboto, sans-serif;
  color: white;
  display: block;
  position: relative;
  top: 300px;
  left: 10%;
  max-width: 12.5em;
  margin: 0 auto;
  border-right: 2px solid rgba(255, 255, 255, 0.75);
  font-size: 180%;
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  transform: translateY(-50%);
}

.anim-typewriter {
  animation: typewriter 4s steps(44) 1s 1 normal both,
    blinkTextCursor 500ms steps(44) infinite normal;
}

/* Projects */

/* Projects General Styles */
#projects {
  border-top: white solid 5px;
  height: 100vh;
  overflow: hidden;
}
.projects-container {
  color: white;
  text-align: center;
  position: relative;
}
.projects-container h1 {
  font-size: 50px;
  margin: 2% 0;
}
/* Projects Buttons */

.projects-button {
  background-color: transparent;
  color: white;
  font-size: 1rem;
  opacity: 0.5;
  cursor: pointer;
}

.projects-button :hover {
  transition: transform 0.1s ease-out;
  transform: scale(1.1);
}

#prev-button {
  position: absolute;
  top: 50%;
  z-index: 10;
  left: 3%;
}

#next-button {
  position: absolute;
  top: 50%;
  z-index: 10;
  left: 93%;
}

/* Projects Carousel */

.projects-list {
  height: 80%;
  display: flex;
  overflow: none;
  align-items: center;
}

.projects-project {
  border: white solid 1px;
  background: var(--main-gradient);
  min-width: 600px;
  height: 60%;
  margin: 0 5%;
  display: grid;
  grid-template-columns: 1fr 2fr;
  align-items: center;
  border-radius: 50px;
  column-gap: 5%;
  padding: 0 5%;
  font-family: Roboto, sans-serif;
}

.projects-project-image {
  display: flex;
  text-align: center;
  border-right: 5px solid whitesmoke;
  height: 90%;
}

.projects-project-image img {
  border-radius: 100%;
  width: 150px;
  height: 150px;
  margin: auto;
}

@media only screen and (max-width: 768px) {
  /* Projects */
  .projects-project {
    min-width: 80%;
    margin: 0 10%;
  }
}

@media only screen and (max-width: 620px) {
  /* For intermidiate mobile phones: */
  .menu,
  .main,
  .right {
    width: 100%;
  }
  /* Projects */
  .projects-project {
    min-width: 80%;
    margin: 0 10%;
    grid-template-columns: 1fr;
    height: 90%;
  }
  .projects-project-image img {
    border-radius: 100%;
    width: 100px;
    height: 100px;
  }
  .projects-project-image {
    border-right: none;
    border-bottom: 5px solid black;
    margin: 10% 0;
  }
}

